--- a/site.css
+++ b/site.css
@@ -1,1 +1,68 @@
+.navbar {
+   padding-top: 0px;
+   padding-bottom: 0px;
+   border: 0;
+   border-radius: 0;
+   margin-bottom: 0;
+   font-size: 15px;
+   letter-spacing : 2px;
+  }
+  .navbar-nav  li a:hover {
+      color: #1abc9c !important;
+  }
+  .bg-1{
+   background-color: #323232;
+      color: white;
 
+  }
+  .bg-2{
+  background-color: white;
+  }
+  
+  .font-1{
+   font-size: 20px;
+   font-face: Modern;
+  }
+  
+  .title{
+   font-size: 25px;
+   font-face: Modern;
+   letter-spacing: 2px;
+  }
+  
+  .middle{
+   height: 350px;
+  }
+  
+  .margin{
+    margin-bottom:55px;
+    margin-top : 45px;
+	letter-spacing:2px;
+  }
+  
+  .header{
+   font-size:24px;
+   }
+  
+  .content{
+   font-size: 14px;
+   padding bottom: 10px;
+   letter-spacing: 1px;
+  }
+  
+  .header_line_spacing{
+   line-height: 250%;
+  }
+  
+  .line_spacing{
+   line-height: 150%;  
+  }
+  
+  .about_line_spacing{
+   line-height: 170%;  
+  }
+   
+  .tips{
+  height:200px;
+  width:200px;
+  } 
